syntax = "proto3";
package words_rpc;

option go_package = "go_rpc_server/words";

service Words {
  rpc GetWords(GetWordsRequest) returns (stream GetWordsResponse) {};
}

message GetWordsRequest {}

message GetWordsResponse {
  uint64 timestamp = 1;
  string word = 2;
}